--- a/notebooks/suppress.ipynb
+++ b/notebooks/suppress.ipynb
@@ -27,7 +27,7 @@
     "df = pd.DataFrame({\n",
     "    'hour': [8, 14, 15, 20, 23],\n",
     "    'object': ['person', 'person', 'cat', 'dog', 'crow'],\n",
-    "    'age': [20, 55, 3, 5, 1]\n",
+    "    'age': [20., 55., 3., 5., 1.]\n",
     "})"
    ],
    "metadata": {
@@ -164,6 +164,58 @@
     }
    },
    "id": "1a86cd6630c4678b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "suppress_float(df, 2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-02T09:15:45.341282Z",
+     "start_time": "2024-01-02T09:15:45.320585100Z"
+    }
+   },
+   "id": "b617fcb97fc29233"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   hour                    object   age\n0     8  (crow, cat, person, dog)  16.8\n1    14  (crow, cat, person, dog)  16.8\n2    15  (crow, cat, person, dog)  16.8\n3    20                       dog  16.8\n4    23                      crow  16.8",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hour</th>\n      <th>object</th>\n      <th>age</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>8</td>\n      <td>(crow, cat, person, dog)</td>\n      <td>16.8</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>14</td>\n      <td>(crow, cat, person, dog)</td>\n      <td>16.8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>15</td>\n      <td>(crow, cat, person, dog)</td>\n      <td>16.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20</td>\n      <td>dog</td>\n      <td>16.8</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>23</td>\n      <td>crow</td>\n      <td>16.8</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-02T09:15:49.514123700Z",
+     "start_time": "2024-01-02T09:15:49.487453300Z"
+    }
+   },
+   "id": "317642150a55750d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1498a6499495b869"
   }
  ],
  "metadata": {
