Removal of unnecessary functions, path aligned to existing examples

--- a/notebooks/sdv_synthdata.ipynb
+++ b/notebooks/sdv_synthdata.ipynb
@@ -161,15 +161,14 @@
     "synthesizer = GaussianCopulaSynthesizer(adult_metadata)\n",
     "\n",
     "# Step 2: Train the synthesizer\n",
-    "synthesizer.fit(adult)\n",
+    "synthesizer.fit(adult) \n",
     "\n",
     "# Step 3: Generate synthetic data\n",
     "synthetic_data = synthesizer.sample(1000)\n",
     "\n",
     "# Print synthetic data\n",
-    "print(adult)\n",
     "print(synthetic_data)\n",
-    "synthetic_data.to_csv('../../../datasets/adult/synthetic_adult.data', index=False)\n"
+    "synthetic_data.to_csv('../datasets/adult/synthetic_adult.data', index=False) # save synthetic data as CSV\n"
    ]
   }
  ],
